<resources>
    <string name="app_name">DrawerRecycler</string>
    <string name="home">Home</string>
    <string name="departures">Departures</string>
    <string name="arrivals">Arrivals</string>
    <string name="other">Other</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="open_drawer">The Drawer is Open</string>
    <string name="close_drawer">The Drawer is Closed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_from_home">Hello From Home</string>
    <string name="hello_from_arrivals">Hello From Arrivals</string>
    <string name="hello_from_departures">Hello From Departures</string>
    <string name="user_name">Erick Herrera</string>
    <string name="user_mail">erickahr86@gmail.com</string>
    <string name="picture_of_a_city">Picture of a City</string>
</resources>